--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -18,7 +18,28 @@ General Purpose GPU (GPGPU) computing is one of today's hottest trends in scient
 
 GPUs originated as dedicated hardware for video games and computer graphics (e.g., for rasterization). Thanks to the highly profitable and always demanding game industry, the static rendering pipeline of yore, was molded into a fully programmable and dynamic execution platform with a SIMD-like programming model. 
 
-For many years leading up to 2006, researchers were able---with significant effort---to trick the GPU into solving scientific problems by encoding solutions within the graphics rendering process (see e.g., \cite{Harris2005,Owens2007}). The release of NVidia's CUDA architecture and software stack at the end of 2006, deprecated those tricks as developers could suddenly target the GPU with the ease of writing a generic C-program. The CUDA hardware and software allowed for non-graphics applications to offload computation. GPUs were finally accessible for use by the general public, not limited to game designers and. 
+
+Due to the inherent task parallelism in computer graphics, GPU designers early on adopted a many-core strategy for the hardware. Since computer graphics traditionally involved simple logic, GPUs were designed with the majority of transistors dedicated to computation in fixed-function vector pipelines. In contrast to this, CPUs have always focused on fast evaluation of serial codes with advanced logic on scalar data. Thus, given the same number of transistors as a GPU, CPUs allocate fewer to computation in order to satisfy the needs for non-computational tasks like branching, caching, etc \cite{Owens2007,CudaGuide2011}. Although individual cores on a GPU have lower clock frequency than a CPU, the sheer number of cores on a GPU results in tremendous throughput in terms of floating point operations per second (FLOPs). Similarly, to supply data to those cores the GPU has evolved high memory bandwidth, which is an order of magnitude or more larger than the leading CPU \cite{CudaGuide2011}. 
+
+
+In the last decade, CPU designers have been forced to transition to multi- and many-core chips in order to keep up with demand for continued growth in computational performance. Power constraints make further frequency scaling on CPUs almost impossible, which leaves increased core counts as the only viable solution for designers to continue satisfying Moore's Law \cite{Owens2007}. The GPU, far ahead in the many-core arena, only required a bit of flexibility in control and logic to compete against the CPU. 
+
+Prior to 2006, the GPU had already evolved away from fixed-function pipelines and on to limited programmable functionality with control over a subset of phases in the rendering process. At the time researchers were able---with significant effort---to trick the GPU into solving scientific problems by encoding solutions within the graphics rendering process (see e.g., \cite{Harris2005,Owens2007}). 
+
+The release of NVidia's CUDA architecture and software stack at the end of 2006, deprecated those tricks as developers could suddenly target the GPU with the ease of writing a generic C-like program \cite{CudaGuide2011}. The monumental new CUDA hardware bypassed the graphics rendering pipeline and allowed programs to execute as though the GPU were another just another compute device. The CUDA software stack included NVidia's compiler, \emph{nvcc}, for developers to implement custom GPU codes. Developers who wanted to quickly transition existing code bases to the GPU had access to the CUBLAS API since day one, which offers an implementation of the Basic Linear Algebra Subprograms (BLAS) suite on the GPU. CUFFT, a CUDA implementation of the Fast Fourier Transform (FFT), was also provided with the same justification. In many ways NVidia ensured that GPU computing was easily accessible to the general public. 
+
+
+One thing missing from the original release of CUDA was sparse matrix algebra support. 
+This led to investigations like \cite{Bell2009,SuKeutzer2012,} and resulted in third party libraries like CUSP \cite{Cusp2012} and ViennaCL \cite{Rupp2010,Rupp2010a}, developed sparse matrix libraries for the GPU. The APIs of CUSP and ViennaCL are used like 
+%TODO: get date
+NVidia eventually included a library named CUSPARSE as part of the CUDA SDK. Initial releases were 
+Developers either implemented their own kernels (as we did in \cite{BolligFlyerErlebacher2012}) or   
+
+%TODO: price of GPU was roughly 800 and massively parallel, high performance cards
+
+
+Today a slew of libraries are included in the CUDA SDK including random number generators (cuRAND), full BLAS replacements (MAGMA) , 
+
 
 Today, CPUs are designed for scalar arithmetic and logic. GPUs emphasize vector operations with SIMD-like architecture. 
 Due to limitations on how CPUs 
@@ -132,7 +153,24 @@ Many GPU applications claim a 50x or higher speedup. This will never be the case
 \section{Targeting the GPU}
 
 \subsection{OpenCL}
-In our initial implementation, published in \cite{BolligFlyerErlebacher2012}, all bets were hedged in favor of OpenCL as the future of GPU computing. Custom kernels were developed to apply RBF-FD weights in the equivalent of a CSR SpMV. Since then the custom kernels have been dropped in favor of a library called ViennaCL. 
+In our initial implementation, published in \cite{BolligFlyerErlebacher2012}, all bets were hedged in favor of OpenCL as the future of GPU computing. Custom kernels were developed to apply RBF-FD weights in the equivalent of a CSR SpMV. 
+
+
+From the definition of RBF-FD we can formulate the problem computationally in two ways. First, stencil operations are independent. Therefore, we can write kernels with perfect parallelism by dedicating a single thread per stencil or a group of threads per stencil.  
+
+Unfortunately, perfect concurrency does not imply perfect or even ideal concurrency on the GPU. 
+
+We first demonstrate the case where one thread is dedicated to each stencil. This is followed by dedicating a group of thread to the stencil. In each case we are operating under the assumption that each stencil is independent on the GPU. 
+
+
+In the time since the publication of \cite{BolligFlyerErlebacher2012} custom OpenCL kernels have been dropped in favor of a library called ViennaCL. 
+
+To further optimize RBF-FD on the GPU, we formulate the problem in terms of a Sparse Matrix-Vector Mulitply (SpMV). When we consider the problem in this light we generate a single Differentiation Matrix that can see two optimizations not possible with our stencil-based view: 
+\begin{itemize} 
+\item First, the sparse containers used in SpMV allow for their own unique optimizations to compress storage and leverage hardware cache.
+\item Evaluation of multiple derivatives can be accumulated by association into one matrix operation. This reduces the total number of floating point operations required per iteration. 
+\end{itemize}
+
 
 %TODO: tell the story of ViennaCL. 
 %TODO: what motivated the switch
@@ -184,18 +222,6 @@ Other formats exist such as the Hybrid ELL plus CSR (HYB) format \cite{Bell2009}
 
 Conclude: sparse containers allow increased efficiency compared to our custom kernels. The custom kernels compete with CSR and COO. 
 
-
-From the definition of RBF-FD we can formulate the problem computationally in two ways. First, stencil operations are independent. Therefore, we can write kernels with perfect parallelism by dedicating a single thread per stencil or a group of threads per stencil.  
-
-Unfortunately, perfect concurrency does not imply perfect or even ideal concurrency on the GPU. 
-
-We first demonstrate the case where one thread is dedicated to each stencil. This is followed by dedicating a group of thread to the stencil. In each case we are operating under the assumption that each stencil is independent on the GPU. 
-
-To further optimize RBF-FD on the GPU, we formulate the problem in terms of a Sparse Matrix-Vector Mulitply (SpMV). When we consider the problem in this light we generate a single Differentiation Matrix that can see two optimizations not possible with our stencil-based view: 
-\begin{itemize} 
-\item First, the sparse containers used in SpMV allow for their own unique optimizations to compress storage and leverage hardware cache.
-\item Evaluation of multiple derivatives can be accumulated by association into one matrix operation. This reduces the total number of floating point operations required per iteration. 
-\end{itemize}
 
 
 
