--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,22 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-09-13 10:15:54 -0500 
+%% Created for Evan Bollig at 2013-09-13 11:09:12 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{Cusp2012,
+	Author = {Nathan Bell and Michael Garland},
+	Date-Added = {2013-09-13 16:09:06 +0000},
+	Date-Modified = {2013-09-13 16:09:12 +0000},
+	Note = {Version 0.3.0},
+	Title = {Cusp: Generic Parallel Algorithms for Sparse Matrix and Graph Computations},
+	Url = {http://cusp-library.googlecode.com},
+	Year = {2012},
+	Bdsk-Url-1 = {http://cusp-library.googlecode.com}}
 
 @inproceedings{SuKeutzer2012,
 	Added-At = {2012-06-26T00:00:00.000+0200},
