--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -65,6 +65,8 @@
 %\appendix
 %\include{rbffd_avoid_pole_singularities}
 %\include{rbffd_weights_on_sphere}
+\include{nvidia_figures}
+
 
 % The BibTeX bibliography/references section.  View the file
 % 'myrefs.bib' to get a feel for what these entries may look like.
