--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -62,7 +62,7 @@
 %\include{conclusions}
 
 
-%\appendix
+\appendix
 %\include{rbffd_avoid_pole_singularities}
 %\include{rbffd_weights_on_sphere}
 \include{nvidia_figures}
