--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,25 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-09-13 11:09:12 -0500 
+%% Created for Evan Bollig at 2013-09-13 15:27:46 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@manual{CudaGuide2013,
+	Date-Added = {2013-09-13 20:23:45 +0000},
+	Date-Modified = {2013-09-13 20:25:37 +0000},
+	Howpublished = {http://docs.nvidia.com/cuda/cuda-c-programming-guide/index.html},
+	Month = {July},
+	Organization = {NVidia},
+	Short = {CUDA},
+	Title = {{CUDA C Programming Guide}},
+	Url = {http://docs.nvidia.com/cuda/cuda-c-programming-guide/index.html},
+	Year = {2013},
+	Bdsk-Url-1 = {http://developer.download.nvidia.com/compute/cuda/1%5C_0/NVIDIA%5C_CUDA%5C_Programming%5C_Guide%5C_1.0.pdf},
+	Bdsk-Url-2 = {http://developer.download.nvidia.com/compute/cuda/1_1/NVIDIA_CUDA_Programming_Guide_1.1.pdf}}
 
 @misc{Cusp2012,
 	Author = {Nathan Bell and Michael Garland},
